--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -86,6 +86,7 @@ jobs:
         - kubectl-1.19
         - kubectl-1.20
         - kubectl-1.21
+        - kubectl-1.22
         - kubectx
         - kubens
         - kubeval
