--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -18,6 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         package-name:
+        - amazon-ecr-credential-helper
         - amtool
         - argocd
         - assume-role
