--- a/.github/auto-label.yml
+++ b/.github/auto-label.yml
@@ -170,6 +170,9 @@ vendor/htmltest:
 vendor/hugo:
 - any: ["vendor/hugo/**"]
   all: ["!bin/**", "!tasks/**"]
+vendor/infracost:
+- any: ["vendor/infracost/**"]
+  all: ["!bin/**", "!tasks/**"]
 vendor/jp:
 - any: ["vendor/jp/**"]
   all: ["!bin/**", "!tasks/**"]
