--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -90,6 +90,9 @@ jobs:
         - kubectl-1.20
         - kubectl-1.21
         - kubectl-1.22
+        - kubectl-1.23
+        - kubectl-1.24
+        - kubectl-1.25
         - kubectx
         - kubens
         - kubeval
