--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -28,11 +28,13 @@ jobs:
         - atmos
         - awless
         - aws-iam-authenticator
+        - aws-nuke
         - aws-vault
         - cfssl
         - cfssljson
         - chamber
         - cli53
+        - cloud-nuke
         - cloudflared
         - codefresh
         - conftest
