Reduce logging by disabling apt-get progress indicator

--- a/deb/Dockerfile.stable-slim
+++ b/deb/Dockerfile.stable-slim
@@ -5,7 +5,7 @@ ENV LC_ALL=C.UTF-8
 ENV PS1="(deb) \w \$ "
 
 RUN apt-get update && \
-    apt-get -y install bash ruby ruby-dev rubygems build-essential curl git zip bzip2 jq
+    apt-get -y -q install bash ruby ruby-dev rubygems build-essential curl git zip bzip2 jq
 # https://github.com/jordansissel/fpm/issues/1663
 RUN gem install --no-document backports -v 3.15.0
 RUN gem install --no-document fpm
