Disable auto-label sync because it removes labels we want to keep

--- a/.github/workflows/auto-label.yml
+++ b/.github/workflows/auto-label.yml
@@ -9,4 +9,6 @@ jobs:
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: '.github/auto-label.yml'
-        sync-labels: true
+        # Set sync-labels to false, working around #112
+        # See https://github.com/actions/labeler/issues/112#issuecomment-1000491676
+        sync-labels: ''
