create multi-arch (arm64, amd64) builders for RPM and Debian

--- a/.github/workflows/debbuild.yml
+++ b/.github/workflows/debbuild.yml
@@ -41,6 +41,8 @@ jobs:
           TAGS="$TAGS,${DOCKER_IMAGE}:${VERSION}"
         fi
         echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
@@ -53,5 +55,6 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: ${{ steps.prepare.outputs.tags }}
         file: deb/Dockerfile.${{matrix.debian}}
