--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,6 +28,8 @@ jobs:
           TAGS="$TAGS,${{ github.repository }}:latest"
         fi
         echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
@@ -41,4 +43,5 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: ${{ (github.event_name == 'release' && github.event.action == 'created') }}
+        platforms: linux/amd64,linux/arm64
         tags: ${{ steps.prepare.outputs.tags }}
