--- a/.github/workflows/debbuild.yml
+++ b/.github/workflows/debbuild.yml
@@ -5,11 +5,13 @@ on:
       - master
     paths:
       - deb/**
+      - .github/workflows/debbuild.yml
 
   pull_request: 
     types: [opened, synchronize, reopened]
     paths:
       - deb/**
+      - .github/workflows/debbuild.yml
 
 jobs:
   build-and-push:
@@ -41,6 +43,8 @@ jobs:
           TAGS="$TAGS,${DOCKER_IMAGE}:${VERSION}"
         fi
         echo "tags=${TAGS}" >> $GITHUB_OUTPUT
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     - name: Login to DockerHub
@@ -53,5 +57,6 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
+        platforms: linux/amd64,linux/arm64
         tags: ${{ steps.prepare.outputs.tags }}
         file: deb/Dockerfile.${{matrix.debian}}
