--- a/tasks/Makefile.package
+++ b/tasks/Makefile.package
@@ -95,10 +95,18 @@ export PACKAGE_VERSION_TARGET ?= RELEASE_VERSION
 
 export AUTO_UPDATE_ENABLED ?= true
 
-# Permit version to be overridden on the command line using PACKAGE_VERSION (e.g. FIGURINE_VERSION=0.3.0)
-VERSION_ENV = $(shell echo '$(PACKAGE_NAME)' | tr '[:lower:]' '[:upper:]')_VERSION
-ifneq ($($(VERSION_ENV)),)
-	PACKAGE_VERSION=$($(VERSION_ENV))
+# Permit version to be overridden on the command line using PACKAGE_VERSION (e.g. terraform_VERSION=0.3.0)
+VERSION_ENV = $(PACKAGE_NAME)_VERSION
+RELEASE_ENV = $(PACKAGE_NAME)_RELEASE
+ifneq ($(strip $($(VERSION_ENV))),)
+	PACKAGE_VERSION=$(strip $($(VERSION_ENV)))
+	# $() is hack to include leading space in variable assignment
+	PACKAGE_VERSION_OVERRIDE = $() (overridden by $(VERSION_ENV) environment variable)
+	ifneq ($(strip $($(RELEASE_ENV))),)
+    	PACKAGE_RELEASE=$(strip $($(RELEASE_ENV)))
+    	# $() is hack to include leading space in variable assignment
+    	PACKAGE_RELEASE_OVERRIDE = $() (overridden by $(RELEASE_ENV) environment variable)
+    endif
 endif
 
 
@@ -113,7 +121,8 @@ $(LOCAL_BIN)/vert:
 	$(MAKE) -C ../vert install
 
 DESCRIPTION:
-	@github-repo-metadata $(VENDOR) $(PACKAGE_REPO_NAME) "index" .description | tee DESCRIPTION
+	@# Use `tr -d '\"$'` to help guard against malicious input
+	@github-repo-metadata $(VENDOR) $(PACKAGE_REPO_NAME) "index" .description | tr -d '\"$$' | tee DESCRIPTION
 
 # In order to support static configuration of version, the VERSION file should be
 # considered up-to-date unless explicitly updated via the "update" target
@@ -244,7 +253,7 @@ info:
 	@printf "%-20s %s\n" "Vendor:" "$(VENDOR)"
 	@printf "%-20s %s\n" "Package:" "$(PACKAGE_NAME)"
 	@if [[ $${PACKAGE_ENABLED:-true} != "false" ]]; then \
-		printf "%-20s %s\n" "Version:" "$(PACKAGE_VERSION)"; \
+		printf "%-20s %s\n" "Version:" "$(PACKAGE_VERSION)$(PACKAGE_VERSION_OVERRIDE)"; \
 	else \
 		printf "%-20s %s\n" "Version:" "OBSOLETE"; \
 	fi
