--- a/tasks/Makefile.package
+++ b/tasks/Makefile.package
@@ -253,12 +253,15 @@ info:
 	@printf "%-20s %s\n" "Vendor:" "$(VENDOR)"
 	@printf "%-20s %s\n" "Package:" "$(PACKAGE_NAME)"
 	@if [[ $${PACKAGE_ENABLED:-true} != "false" ]]; then \
-		printf "%-20s %s\n" "Version:" "$(PACKAGE_VERSION)$(PACKAGE_VERSION_OVERRIDE)"; \
+		printf "%-20s %s\n" "Version:" "$(PACKAGE_VERSION)$${package_version_star}$(PACKAGE_VERSION_OVERRIDE)"; \
 	else \
 		printf "%-20s %s\n" "Version:" "OBSOLETE"; \
 	fi
 	@printf "%-20s %s\n" "License:" "$(PACKAGE_LICENSE)"
-	@printf "%-20s %s\n" "Arch:" "$(if $(subst rhel,,$(DIST_DISTRIBUTION)),$(HOST_GOARCH),$(HOST_NATIVE_ARCH))"
+	@if [[ "$(PACKAGE_ARCHS_DISABLED)" =~ "$(HOST_GOARCH)" ]]; then \
+		package_arch_disabled=' (DISABLED)'; \
+	fi; \
+	printf "%-20s %s\n" "Arch:" "$(if $(subst rhel,,$(DIST_DISTRIBUTION)),$(HOST_GOARCH),$(HOST_NATIVE_ARCH))$${package_arch_disabled}"
 	@printf "%-20s %s\n" "OS:" "$(DIST_OS)"
 	@printf "%-20s %s\n" "Distribution:" "$(DIST_DISTRIBUTION)"
 	@printf "%-20s %s\n" "Homepage URL:" "$(PACKAGE_HOMEPAGE_URL)"
@@ -269,7 +272,10 @@ info:
 # info/short is used to make docs/targets.md
 info/short:
 	@if [[ $${PACKAGE_ENABLED:-true} != "false" ]]; then \
-		printf "%-25s %-10s %s\n" "$${PACKAGE_NAME}" "$${PACKAGE_VERSION}" "$${PACKAGE_DESCRIPTION}"; \
+		if [[ "$(PACKAGE_ARCHS_DISABLED)" != "" ]]; then \
+    		package_arch_incomplete='*'; \
+    	fi; \
+		printf "%-25s %-10s %s\n" "$${PACKAGE_NAME}$${package_arch_incomplete}" "$${PACKAGE_VERSION}" "$${PACKAGE_DESCRIPTION}"; \
 	else \
 		printf "%-25s %-10s %s\n" "$${PACKAGE_NAME}" "OBSOLETE" "$${PACKAGE_DESCRIPTION}"; \
 	fi
