--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -90,6 +90,8 @@ jobs:
         - kubectl-1.24
         - kubectl-1.25
         - kubectl-1.26
+        - kubectl-1.27
+        - kubectl-1.28
         - kubectx
         - kubens
         - kubeval
