--- a/.github/package-template.yml
+++ b/.github/package-template.yml
@@ -74,7 +74,7 @@ jobs:
 
   # Build for alpine linux
   # Kept separate because it is old and slightly different than the other package builds
-  alpine-%PACKAGE_NAME%:
+  alpine-%PACKAGE_JSON_NAME%:
     needs: matrix-%PACKAGE_JSON_NAME%
     if: github.event_name != 'schedule' && needs.matrix-%PACKAGE_JSON_NAME%.outputs.apk-enabled != 'false'
     runs-on: ubuntu-latest
@@ -156,7 +156,7 @@ jobs:
           no-wait-for-sync: 'true'                          # Skip the waiting for package synchronisation (i.e. upload only)
 
   # Build packages with fpm package manager
-  package-%PACKAGE_NAME%:
+  package-%PACKAGE_JSON_NAME%:
     needs: matrix-%PACKAGE_JSON_NAME%
     # Should not be needed, but without these conditions, this job would fail with an error if the matrix is []
     # and would run with package-type empty if matrix is ["apk"]
