--- a/.github/workflows/kubectl-1.21.yml
+++ b/.github/workflows/kubectl-1.21.yml
@@ -74,7 +74,7 @@ jobs:
 
   # Build for alpine linux
   # Kept separate because it is old and slightly different than the other package builds
-  alpine-kubectl-1.21:
+  alpine-kubectl-1_21:
     needs: matrix-kubectl-1_21
     if: github.event_name != 'schedule' && needs.matrix-kubectl-1_21.outputs.apk-enabled != 'false'
     runs-on: ubuntu-latest
@@ -156,7 +156,7 @@ jobs:
           no-wait-for-sync: 'true'                          # Skip the waiting for package synchronisation (i.e. upload only)
 
   # Build packages with fpm package manager
-  package-kubectl-1.21:
+  package-kubectl-1_21:
     needs: matrix-kubectl-1_21
     # Should not be needed, but without these conditions, this job would fail with an error if the matrix is []
     # and would run with package-type empty if matrix is ["apk"]
