--- a/.github/workflows/teleport-4.3.yml
+++ b/.github/workflows/teleport-4.3.yml
@@ -74,7 +74,7 @@ jobs:
 
   # Build for alpine linux
   # Kept separate because it is old and slightly different than the other package builds
-  alpine-teleport-4.3:
+  alpine-teleport-4_3:
     needs: matrix-teleport-4_3
     if: github.event_name != 'schedule' && needs.matrix-teleport-4_3.outputs.apk-enabled != 'false'
     runs-on: ubuntu-latest
@@ -156,7 +156,7 @@ jobs:
           no-wait-for-sync: 'true'                          # Skip the waiting for package synchronisation (i.e. upload only)
 
   # Build packages with fpm package manager
-  package-teleport-4.3:
+  package-teleport-4_3:
     needs: matrix-teleport-4_3
     # Should not be needed, but without these conditions, this job would fail with an error if the matrix is []
     # and would run with package-type empty if matrix is ["apk"]
