--- a/.github/workflows/terraform_0.12.yml
+++ b/.github/workflows/terraform_0.12.yml
@@ -74,7 +74,7 @@ jobs:
 
   # Build for alpine linux
   # Kept separate because it is old and slightly different than the other package builds
-  alpine-terraform_0.12:
+  alpine-terraform_0_12:
     needs: matrix-terraform_0_12
     if: github.event_name != 'schedule' && needs.matrix-terraform_0_12.outputs.apk-enabled != 'false'
     runs-on: ubuntu-latest
@@ -156,7 +156,7 @@ jobs:
           no-wait-for-sync: 'true'                          # Skip the waiting for package synchronisation (i.e. upload only)
 
   # Build packages with fpm package manager
-  package-terraform_0.12:
+  package-terraform_0_12:
     needs: matrix-terraform_0_12
     # Should not be needed, but without these conditions, this job would fail with an error if the matrix is []
     # and would run with package-type empty if matrix is ["apk"]
