--- a/.github/package-template.yml
+++ b/.github/package-template.yml
@@ -49,7 +49,7 @@ jobs:
   # so each job must have a unique name for the rules to work properly.
   # See https://github.com/Mergifyio/mergify/discussions/5082
   # and https://github.com/Mergifyio/mergify/issues/5083
-  matrix-%PACKAGE_NAME%:
+  matrix-%PACKAGE_JSON_NAME%:
     if: github.event_name != 'schedule'
     runs-on: ubuntu-latest
     outputs:
@@ -74,9 +74,9 @@ jobs:
 
   # Build for alpine linux
   # Kept separate because it is old and slightly different than the other package builds
-  alpine-%PACKAGE_NAME%:
-    needs: matrix-%PACKAGE_NAME%
-    if: github.event_name != 'schedule' && needs.matrix-%PACKAGE_NAME%.outputs.apk-enabled != 'false'
+  alpine-%PACKAGE_JSON_NAME%:
+    needs: matrix-%PACKAGE_JSON_NAME%
+    if: github.event_name != 'schedule' && needs.matrix-%PACKAGE_JSON_NAME%.outputs.apk-enabled != 'false'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -156,18 +156,18 @@ jobs:
           no-wait-for-sync: 'true'                          # Skip the waiting for package synchronisation (i.e. upload only)
 
   # Build packages with fpm package manager
-  package-%PACKAGE_NAME%:
-    needs: matrix-%PACKAGE_NAME%
+  package-%PACKAGE_JSON_NAME%:
+    needs: matrix-%PACKAGE_JSON_NAME%
     # Should not be needed, but without these conditions, this job would fail with an error if the matrix is []
     # and would run with package-type empty if matrix is ["apk"]
     if: >
-      github.event_name != 'schedule' && needs.matrix-%PACKAGE_NAME%.outputs.package-enabled != 'false'
-      && needs.matrix-%PACKAGE_NAME%.outputs.package-matrix != '[]' && needs.matrix-%PACKAGE_NAME%.outputs.package-matrix != '["apk"]'
+      github.event_name != 'schedule' && needs.matrix-%PACKAGE_JSON_NAME%.outputs.package-enabled != 'false'
+      && needs.matrix-%PACKAGE_JSON_NAME%.outputs.package-matrix != '[]' && needs.matrix-%PACKAGE_JSON_NAME%.outputs.package-matrix != '["apk"]'
 
     strategy:
       matrix:
-        package-type: ${{ fromJSON(needs.matrix-%PACKAGE_NAME%.outputs.package-matrix) }}
-        arch: ${{ fromJSON(needs.matrix-%PACKAGE_NAME%.outputs.arch-matrix) }}
+        package-type: ${{ fromJSON(needs.matrix-%PACKAGE_JSON_NAME%.outputs.package-matrix) }}
+        arch: ${{ fromJSON(needs.matrix-%PACKAGE_JSON_NAME%.outputs.arch-matrix) }}
         exclude:
         - package-type: 'apk'
         include:
