--- a/.github/workflows/kubectl-1.13.yml
+++ b/.github/workflows/kubectl-1.13.yml
@@ -49,7 +49,7 @@ jobs:
   # so each job must have a unique name for the rules to work properly.
   # See https://github.com/Mergifyio/mergify/discussions/5082
   # and https://github.com/Mergifyio/mergify/issues/5083
-  matrix-kubectl-1.13:
+  matrix-kubectl-1_13:
     if: github.event_name != 'schedule'
     runs-on: ubuntu-latest
     outputs:
@@ -74,9 +74,9 @@ jobs:
 
   # Build for alpine linux
   # Kept separate because it is old and slightly different than the other package builds
-  alpine-kubectl-1.13:
-    needs: matrix-kubectl-1.13
-    if: github.event_name != 'schedule' && needs.matrix-kubectl-1.13.outputs.apk-enabled != 'false'
+  alpine-kubectl-1_13:
+    needs: matrix-kubectl-1_13
+    if: github.event_name != 'schedule' && needs.matrix-kubectl-1_13.outputs.apk-enabled != 'false'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -156,18 +156,18 @@ jobs:
           no-wait-for-sync: 'true'                          # Skip the waiting for package synchronisation (i.e. upload only)
 
   # Build packages with fpm package manager
-  package-kubectl-1.13:
-    needs: matrix-kubectl-1.13
+  package-kubectl-1_13:
+    needs: matrix-kubectl-1_13
     # Should not be needed, but without these conditions, this job would fail with an error if the matrix is []
     # and would run with package-type empty if matrix is ["apk"]
     if: >
-      github.event_name != 'schedule' && needs.matrix-kubectl-1.13.outputs.package-enabled != 'false'
-      && needs.matrix-kubectl-1.13.outputs.package-matrix != '[]' && needs.matrix-kubectl-1.13.outputs.package-matrix != '["apk"]'
+      github.event_name != 'schedule' && needs.matrix-kubectl-1_13.outputs.package-enabled != 'false'
+      && needs.matrix-kubectl-1_13.outputs.package-matrix != '[]' && needs.matrix-kubectl-1_13.outputs.package-matrix != '["apk"]'
 
     strategy:
       matrix:
-        package-type: ${{ fromJSON(needs.matrix-kubectl-1.13.outputs.package-matrix) }}
-        arch: ${{ fromJSON(needs.matrix-kubectl-1.13.outputs.arch-matrix) }}
+        package-type: ${{ fromJSON(needs.matrix-kubectl-1_13.outputs.package-matrix) }}
+        arch: ${{ fromJSON(needs.matrix-kubectl-1_13.outputs.arch-matrix) }}
         exclude:
         - package-type: 'apk'
         include:
