--- a/.github/workflows/debbuild.yml
+++ b/.github/workflows/debbuild.yml
@@ -58,5 +58,6 @@ jobs:
       with:
         push: true
         platforms: linux/amd64,linux/arm64
+        provenance: false
         tags: ${{ steps.prepare.outputs.tags }}
         file: deb/Dockerfile.${{matrix.debian}}
