Update to new workflow badge URL

--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -123,6 +123,8 @@ jobs:
         - sudosh
         - teleport
         - terraform
+        - terraform-0.14
+        - terraform-0.15
         - terraform-1
         - terraform-config-inspect
         - terraform-docs
