Add banner & update readme (#4342)
Co-authored-by: Nuru <Nuru@users.noreply.github.com>

--- a/README.yaml
+++ b/README.yaml
@@ -30,11 +30,8 @@ github_repo: cloudposse/packages
 # Badges to display
 badges:
   - name: "Auto Update Status"
-    image: "https://github.com/cloudposse/packages/workflows/auto-update/badge.svg"
-    url: "https://github.com/cloudposse/packages/actions?query=workflow%3Aauto-update"
-  - name: "Latest Release"
-    image: "https://img.shields.io/github/release/cloudposse/packages.svg"
-    url: "https://github.com/cloudposse/packages/releases/latest"
+    image: "https://github.com/cloudposse/packages/actions/workflows/auto-update-packages.yml/badge.svg"
+    url: "https://github.com/cloudposse/packages/actions/workflows/auto-update-packages.yml"
   - name: "Slack Community"
     image: "https://slack.cloudposse.com/badge.svg"
     url: "https://slack.cloudposse.com"
@@ -321,6 +318,8 @@ examples: |-
 contributors:
   - name: "Erik Osterman"
     github: "osterman"
+  - name: "Nuru"
+    github: "Nuru"
   - name: "Igor Rodionov"
     github: "goruha"
   - name: "Andriy Knysh"
