--- a/tasks/Makefile.package
+++ b/tasks/Makefile.package
@@ -274,7 +274,7 @@ info:
 # info/short is used to make docs/targets.md
 info/short:
 	@if [[ $${PACKAGE_ENABLED:-true} != "false" ]]; then \
-		if [[ "$(PACKAGE_ARCHS_DISABLED)" != "" ]]; then \
+		if [[ "$(PACKAGE_ARCHS_DISABLED)" != "" ]] && ! [[ "$(PACKAGE_ARCHS_DISABLED)" =~ "no-linux" ]]; then \
     		package_arch_incomplete='*'; \
     	fi; \
 		printf "%-25s %-10s %s\n" "$${PACKAGE_NAME}$${package_arch_incomplete}" "$${PACKAGE_VERSION}" "$${PACKAGE_DESCRIPTION}"; \
@@ -283,9 +283,23 @@ info/short:
 	fi
 
 # info/md is used to make docs/badges.md
+# We truncate long versions to 9 characters to avoid making the version column too wide.
+# We use GitHub-flavored Markdown special format [text](## "hover text") to make the truncated version accessible via hover.
 info/md:
 	@if [[ $${PACKAGE_ENABLED:-true} != "false" ]]; then \
-		printf "[![%s](https://github.com/cloudposse/packages/workflows/%s/badge.svg?branch=master)](https://github.com/cloudposse/packages/actions?query=workflow%%3A%s) | %-10s | %s\n" "$${PACKAGE_NAME}" "$${PACKAGE_NAME}" "$${PACKAGE_NAME}" "$${PACKAGE_VERSION}" "$${PACKAGE_DESCRIPTION}"; \
+		if [[ "$(PACKAGE_ARCHS_DISABLED)" != "" ]] && ! [[ "$(PACKAGE_ARCHS_DISABLED)" =~ "no-linux" ]]; then \
+    		package_arch_incomplete='*'; \
+    	fi; \
+    	if (( $${#PACKAGE_VERSION} > 9 )); then \
+			truncated_version='[%-9.9s…](## "$(subst %,,$(subst ',,$(subst ",,$(PACKAGE_VERSION))))")'; \
+		else \
+			truncated_version='%-10s'; \
+		fi; \
+		if [[ "$${AUTO_UPDATE_ENABLED:-true}" == "true" ]] || [[ "$${AUTO_UPDATE_ENABLED:-true}" == "softfail" ]]; then \
+			printf "[![%s](https://github.com/cloudposse/packages/actions/workflows/%s.yml/badge.svg?branch=master)](https://github.com/cloudposse/packages/actions?query=workflow%%3A%s)$${package_arch_incomplete} | $${truncated_version} | %s\n" "$${PACKAGE_NAME}" "$${PACKAGE_NAME}" "$${PACKAGE_NAME}" "$${PACKAGE_VERSION}" "$${PACKAGE_DESCRIPTION}"; \
+		else \
+			printf "%s$${package_arch_incomplete} \[frozen\] | $${truncated_version} | %s\n" "$${PACKAGE_NAME}" "$${PACKAGE_VERSION}" "$${PACKAGE_DESCRIPTION}"; \
+		fi; \
 	fi
 
 # info/github is used to configure GitHub Actions, particularly build and auto-update
