--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -139,6 +139,7 @@ jobs:
         - variant
         - variant2
         - vault
+        - velero
         - vendir
         - venona
         - vert
