--- a/tasks/Makefile.package
+++ b/tasks/Makefile.package
@@ -284,14 +284,15 @@ info/short:
 
 # info/md is used to make docs/badges.md
 # We truncate long versions to 9 characters to avoid making the version column too wide.
-# We use GitHub-flavored Markdown special format [text](## "hover text") to make the truncated version accessible via hover.
+# We could use Markdown format [text](URL "hover text") to make the truncated version accessible via hover.
+# Instead we use the GitHub details block to make the full version accessible via click.
 info/md:
 	@if [[ $${PACKAGE_ENABLED:-true} != "false" ]]; then \
 		if [[ "$(PACKAGE_ARCHS_DISABLED)" != "" ]] && ! [[ "$(PACKAGE_ARCHS_DISABLED)" =~ "no-linux" ]]; then \
     		package_arch_incomplete='*'; \
     	fi; \
     	if (( $${#PACKAGE_VERSION} > 9 )); then \
-			truncated_version='[%-9.9s…](## "$(subst %,,$(subst ',,$(subst ",,$(PACKAGE_VERSION))))")'; \
+			truncated_version='<details><summary>show</summary>%s</details>'; \
 		else \
 			truncated_version='%-10s'; \
 		fi; \
