Add package kubectl-1.29

--- a/.github/auto-label.yml
+++ b/.github/auto-label.yml
@@ -275,6 +275,9 @@ vendor/kubectl-1.27:
 vendor/kubectl-1.28:
 - any: ["vendor/kubectl-1.28/**"]
   all: ["!bin/**", "!tasks/**"]
+vendor/kubectl-1.29:
+- any: ["vendor/kubectl-1.29/**"]
+  all: ["!bin/**", "!tasks/**"]
 vendor/kubectl:
 - any: ["vendor/kubectl/**"]
   all: ["!bin/**", "!tasks/**"]
