--- a/.github/workflows/auto-update-packages.yml
+++ b/.github/workflows/auto-update-packages.yml
@@ -91,6 +91,7 @@ jobs:
         - kubectl-1.26
         - kubectl-1.27
         - kubectl-1.28
+        - kubectl-1.29
         - kubectx
         - kubens
         - kubeval
